fixed incorrect text and phone alignment

--- a/Gravity.css
+++ b/Gravity.css
@@ -512,11 +512,41 @@
     min-height: 610px;
   }
 
+  .u-section-3 .u-text-1 {
+    width: auto;
+    margin-left: auto;
+  }
+
   .u-section-3 .u-layout-wrap-1 {
     margin-top: 20px;
   }
 
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 377px;
+  }
+
+  .u-section-3 .u-icon-1 {
+    margin-top: 0;
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-left: auto;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-left: 4px;
+  }
+
+  .u-section-3 .u-text-5 {
+    width: auto;
+  }
+
+  .u-section-3 .u-text-6 {
+    width: auto;
+  }
+
   .u-section-3 .u-text-7 {
+    width: auto;
     margin-right: 0;
   }
 }.u-section-4 .u-sheet-1 {
@@ -907,6 +937,13 @@
   .u-section-7 .u-text-1 {
     margin-right: 0;
   }
+}
+
+@media (max-width: 575px) {
+  .u-section-7 .u-text-1 {
+    width: auto;
+    margin-top: 30px;
+  }
 }.u-section-8 .u-sheet-1 {
   min-height: 816px;
 }
@@ -1110,7 +1147,13 @@
   }
 
   .u-section-8 .u-layout-cell-1 {
-    min-height: 54px;
+    min-height: 194px;
+  }
+
+  .u-section-8 .u-text-1 {
+    width: auto;
+    margin-top: 0;
+    margin-right: 140px;
   }
 
   .u-section-8 .u-layout-cell-2 {
@@ -1277,8 +1320,8 @@
 }
 
 .u-section-10 .u-layout-wrap-1 {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .u-section-10 .u-layout-cell-1 {
@@ -1286,21 +1329,20 @@
 }
 
 .u-section-10 .u-container-layout-1 {
-  padding: 30px 60px 30px 30px;
+  padding: 30px 0;
 }
 
 .u-section-10 .u-text-1 {
-  text-transform: uppercase;
-  font-weight: 700;
   font-family: CenturyGothic;
+  text-transform: uppercase;
+  font-weight: 600;
   letter-spacing: 2px;
-  margin: 49px 40px 0 0;
+  margin: 67px 60px 0 239px;
 }
 
 .u-section-10 .u-text-2 {
-  letter-spacing: 0px;
-  line-height: 1.51;
-  margin: 18px 0 0;
+  font-family: "Open Sans", sans-serif;
+  margin: 18px 60px 0 0;
 }
 
 .u-section-10 .u-video-1 {
@@ -1325,7 +1367,12 @@
   }
 
   .u-section-10 .u-text-1 {
-    margin-right: 21px;
+    margin-right: 13px;
+    margin-left: 192px;
+  }
+
+  .u-section-10 .u-text-2 {
+    margin-right: 13px;
   }
 
   .u-section-10 .u-video-1 {
@@ -1339,14 +1386,21 @@
   }
 
   .u-section-10 .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 548px;
   }
 
   .u-section-10 .u-container-layout-1 {
+    padding-left: 30px;
     padding-right: 30px;
   }
 
   .u-section-10 .u-text-1 {
+    width: auto;
+    margin-right: 0;
+    margin-left: 47px;
+  }
+
+  .u-section-10 .u-text-2 {
     margin-right: 0;
   }
 
@@ -1360,8 +1414,12 @@
     min-height: 523px;
   }
 
+  .u-section-10 .u-layout-wrap-1 {
+    margin-top: 156px;
+  }
+
   .u-section-10 .u-layout-cell-1 {
-    min-height: 365px;
+    min-height: 312px;
   }
 
   .u-section-10 .u-container-layout-1 {
@@ -1370,8 +1428,7 @@
   }
 
   .u-section-10 .u-text-1 {
-    width: auto;
-    margin-top: 90px;
+    margin-top: 0;
   }
 
   .u-section-10 .u-container-layout-2 {
@@ -1385,7 +1442,139 @@
     min-height: 381px;
   }
 
+  .u-section-10 .u-layout-wrap-1 {
+    margin-top: 20px;
+  }
+
   .u-section-10 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-10 .u-text-1 {
+    margin-left: auto;
+  }
+
+  .u-section-10 .u-text-2 {
+    margin-left: auto;
+  }
+
+  .u-section-10 .u-video-1 {
+    min-height: 303px;
+  }
+}.u-section-11 .u-sheet-1 {
+  min-height: 500px;
+}
+
+.u-section-11 .u-layout-wrap-1 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.u-section-11 .u-layout-cell-1 {
+  min-height: 460px;
+}
+
+.u-section-11 .u-container-layout-1 {
+  padding: 30px 60px 30px 30px;
+}
+
+.u-section-11 .u-text-1 {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-family: CenturyGothic;
+  letter-spacing: 2px;
+  margin: 49px 40px 0 0;
+}
+
+.u-section-11 .u-text-2 {
+  letter-spacing: 0px;
+  line-height: 1.51;
+  margin: 18px 0 0;
+}
+
+.u-section-11 .u-video-1 {
+  min-height: 460px;
+}
+
+.u-section-11 .u-container-layout-2 {
+  padding: 30px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-11 .u-sheet-1 {
+    min-height: 418px;
+  }
+
+  .u-section-11 .u-layout-wrap-1 {
+    position: relative;
+  }
+
+  .u-section-11 .u-layout-cell-1 {
+    min-height: 379px;
+  }
+
+  .u-section-11 .u-text-1 {
+    margin-right: 21px;
+  }
+
+  .u-section-11 .u-video-1 {
+    min-height: 388px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-11 .u-sheet-1 {
+    min-height: 329px;
+  }
+
+  .u-section-11 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-11 .u-container-layout-1 {
+    padding-right: 30px;
+  }
+
+  .u-section-11 .u-text-1 {
+    margin-right: 0;
+  }
+
+  .u-section-11 .u-video-1 {
+    min-height: 460px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-11 .u-sheet-1 {
+    min-height: 523px;
+  }
+
+  .u-section-11 .u-layout-cell-1 {
+    min-height: 365px;
+  }
+
+  .u-section-11 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-11 .u-text-1 {
+    width: auto;
+    margin-top: 90px;
+  }
+
+  .u-section-11 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-11 .u-sheet-1 {
+    min-height: 381px;
+  }
+
+  .u-section-11 .u-layout-cell-1 {
     min-height: 100px;
   }
 }@font-face {
