--- a/Home.css
+++ b/Home.css
@@ -13,9 +13,11 @@
 
 .u-section-1 .u-btn-1 {
   font-family: Inter;
-  transition-duration: 0.5s;
+  transition-duration: 0.25s;
   box-shadow: 0px 0px 0px rgba(128,128,128,0);
   text-shadow: 0px 0px 0px rgba(0,0,0,0);
+  border-style: solid;
+  background-image: none;
   margin: 70px auto 60px;
 }
 
@@ -65,6 +67,11 @@
   .u-section-1 .u-text-1 {
     margin-top: 121px;
   }
+
+  .u-section-1 .u-text-2 {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 }
 
 .u-section-1 .u-btn-1,
@@ -83,18 +90,10 @@
   background-color: transparent !important;
 }
 
-.u-section-1 .u-btn-1 {
-  border-color: transparent !important;
-}
-
 .u-section-1 .u-btn-1.u-btn-1.u-btn-1.hover {
   transform: translateX(0px) translateY(-5px) scale(1) !important;
   box-shadow: 0px 0px 0px  rgba(128,128,128,0) !important;
   text-shadow: 0px 0px 0px rgba(0,0,0,0) !important;
-}
-
-.u-section-1 .u-btn-1 {
-  border-color: transparent !important;
 }
 
 .u-section-1 .u-container-layout:hover .u-btn-1 {
